[package]
name = "kovi-plugin-transfer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Kovi plugin for forwarding QQ messages between sources and targets"

[dependencies]
kovi = { version = "0.12.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
